@@ -1,3 +1,7 @@
+2005-10-21 Niklas Knutsson  <nq@altern.org>
+
+	* Lots of new units
+
 2005-10-20 Niklas Knutsson  <nq@altern.org>
 
 	* Only give "Error in unit expression" message on errors in CompositeUnit parsing
